# swagger.json
@@ -9,9 +9,20 @@
       "url": "https://opensource.org/licenses/MIT"
     }
   },
-  "servers": [{"url": "https://flexyplanner.onrender.com/"},{ "url": "http://localhost:3000" }],
-  "consumes": ["application/json"],
-  "produces": ["application/json"],
+  "servers": [
+    {
+      "url": "https://flexyplanner.onrender.com/"
+    },
+    {
+      "url": "http://localhost:3000"
+    }
+  ],
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "tags": [
     {
       "name": "Auth",
@@ -20,12 +31,18 @@
     {
       "name": "Promo-codes",
       "description": "promo  endpoints"
+    },
+    {
+      "name": "Mark Up",
+      "description": "markup  endpoints"
     }
   ],
   "paths": {
     "/auth/register": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "User registration",
         "parameters": [],
         "requestBody": {
@@ -63,7 +80,9 @@
     },
     "/auth/login": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "User authentication",
         "parameters": [],
         "requestBody": {
@@ -101,9 +120,15 @@
     },
     "/auth/logout": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Logout",
-        "security": [{ "Bearer": [] }],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "parameters": [],
         "responses": {
           "204": {
@@ -126,9 +151,15 @@
     },
     "/auth/refresh": {
       "post": {
-        "tags": ["Auth"],
+        "tags": [
+          "Auth"
+        ],
         "summary": "Get new pair of tokens (use Bearer {refreshToken} instead of accessToken)",
-        "security": [{ "Bearer": [] }],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "parameters": [],
         "requestBody": {
           "description": "Request body with session's id",
@@ -169,9 +200,15 @@
     },
     "/promo": {
       "get": {
-        "tags": ["Promo-codes"],
+        "tags": [
+          "Promo-codes"
+        ],
         "summary": "Search and get a list of Promo codes by query",
-        "security": [{ "Bearer": [] }],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "parameters": [
           {
             "name": "promo",
@@ -211,10 +248,16 @@
           }
         }
       },
-      "post" : {
-        "tags": ["Promo-codes"],
+      "post": {
+        "tags": [
+          "Promo-codes"
+        ],
         "summary": "Create Promo codes by Common with date & Personal without date",
-        "security": [{ "Bearer": [] }],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -232,10 +275,16 @@
           }
         }
       },
-      "patch" : {
-        "tags": ["Promo-codes"],
+      "patch": {
+        "tags": [
+          "Promo-codes"
+        ],
         "summary": "Switch isActive to true or false",
-        "security": [{ "Bearer": [] }],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -253,9 +302,15 @@
           }
         }
       },
-      "delete" : {
-        "tags": ["Promo-codes"],
-        "security": [{ "Bearer": [] }],
+      "delete": {
+        "tags": [
+          "Promo-codes"
+        ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "requestBody": {
           "description": "Switch isActive to true or false",
           "required": true,
@@ -274,12 +329,67 @@
           }
         }
       }
+    },
+    "/markup": {
+
+      "get": {
+        "summary": "get all data  markUp is_Active: true",
+        "tags": ["Mark Up"],
+        "responses": {
+          "200": {
+            "description": "data  markUp",
+            "content": {}
+          }
+        }
+      },
+      "post": {
+        "tags": ["Mark Up"],
+        "summary": "delete and create new markup from data:{price: xxx, preOrderPrice: xxx}",
+        "requestBody": {
+          "description": "Switch isActive to true or false",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema":{
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "description": "type markup",
+                    "example": "pre-order"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "data  markUp",
+            "content": {}
+            }
+          }
+        },
+      "patch": {
+        "tags": ["Mark Up"],
+        "summary": "switch  markUp is_Active",
+        "responses": {
+          "200": {
+            "description": "data  markUp",
+            "content": {}
+          }
+        }
+      }
     }
   },
   "components": {
     "schemas": {
       "RegistrationRequest": {
-        "required": ["email", "password", "username"],
+        "required": [
+          "email",
+          "password",
+          "username"
+        ],
         "type": "object",
         "properties": {
           "email": {
@@ -326,7 +436,10 @@
         }
       },
       "LoginRequest": {
-        "required": ["email", "password"],
+        "required": [
+          "email",
+          "password"
+        ],
         "type": "object",
         "properties": {
           "email": {
@@ -446,7 +559,12 @@
                   "bloodType": {
                     "type": "number",
                     "description": "User's blood type",
-                    "enum": [1, 2, 3, 4]
+                    "enum": [
+                      1,
+                      2,
+                      3,
+                      4
+                    ]
                   },
                   "desiredWeight": {
                     "type": "number",
@@ -482,7 +600,9 @@
       },
       "RefreshTokensRequest": {
         "type": "object",
-        "required": ["sid"],
+        "required": [
+          "sid"
+        ],
         "properties": {
           "sid": {
             "type": "string",
